--- a/popup.html
+++ b/popup.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Top 10 Most Active Members</h1>
+  <h1>Top 10 Most Active Posting Members</h1>
   <table id="activity-table">
     <thead>
       <tr>
